// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FatherSonComponent shold by match snapshot 1`] = `
<div
  id="root1"
>
  <h5>
    Hijo
  </h5>
  <code>
    
  </code>
  <br />
  <br />
  
  
</div>
`;

exports[`FatherSonComponent shold by match snapshot if client exist 1`] = `
<div
  id="root4"
>
  <h5>
    Hijo
  </h5>
  <code>
    {
  "id": 1,
  "name": "LEO"
}
  </code>
  <br />
  <br />
  <button
    class="btn btn-primary"
    data-test="btn-update"
  >
     Cambiar ID

  </button>
  
  <button
    class="btn btn-outline-danger"
    data-test="btn-delete"
  >
     Borrar Cliente

  </button>
  
</div>
`;
